--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "utils": "^0.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
